# window_ros

line_follower_pkg/src/: follower_script.py
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/meshes/: wheelchair_prc.STL
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_description/urdf/: depthcam.xacro  nexus_4wd_mecanum.xacro  tracker.xacro
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/: CMakeLists.txt
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/include/realsense_ros/: gazebo_ros_realsense.h
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/launch/: nexus_4wd_mecanum_world.launch
nexus_4wd_mecanum_simulator/nexus_4wd_mecanum_gazebo/src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
